--- a/dirRath.html
+++ b/dirRath.html
@@ -563,11 +563,19 @@
 						<a href="https://www.facebook.com/theholisticphysio.ie" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.instagram.com/theholisticphysio.ie/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
-				</div>			
-
+				</div>
 			</div>  <!-- End card deck x 3 -->
 
 			<div class="card-deck" style="padding: 0.5rem;">
+				<div class="card bg-dark text-white">
+					<div class="card-body">
+						<p class="card-text"><b>N&#243;ra's Love Your Life Complimentary Therapies</b></p>
+						<p class="card-text">A67 XP60</p>
+						<p class="card-text">Reflexology, Reiki, Rahanni, Aromatouch</p>
+						<p class="card-text"><a href="tel:+353871473457" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob:  087 147 3457</p>
+						<a href="https://www.facebook.com/nora.shanahan.9/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					</div>
+				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Sunbeam House Services</b></p>
@@ -585,8 +593,6 @@
 						<p class="card-text"><a href="tel:+35312115048" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 01 211 5048</p>
 						<a href="https://www2.hse.ie/services/find-urgent-emergency-care/st-columcilles-injury-unit-loughlinstown/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
-				</div>
-				<div class="card border-0">
 				</div>
 			</div>        <!-- End card deck x 3 -->
 			
@@ -1209,7 +1215,7 @@
 				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
-						<p class="card-text"><b>Avonmore Sheds</b></p>
+						<p class="card-text"><b>Avonmore Garden Products</b></p>
 						<p class="card-text"><a href="tel:+353863017176" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 086 301 7176</p>
 						<p class="card-text"><a href="mailto:avonmoresheds@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: avonmoresheds@gmail.com</p>
 						<a href="https://avonmoresheds.com/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
