--- a/commRath.html
+++ b/commRath.html
@@ -120,7 +120,7 @@
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Rathdrum Men's Shed</b></p>
-						<p class="card-text"><i>Parish Office, Ss Mary and Michael Church, Rathdrum, Co. Wicklow, A67 CY80</i></p>
+						<p class="card-text"><i>Parish Office, Church of St. Mary &#38; St. Michael, Co. Wicklow, A67 CY80</i></p>
 						<p class="card-text"><a href="mailto:rathdrumshed@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrumshed@gmail.com</p>
 						<a href="https://menssheds.ie/sheds/rathdrum-mens-shed/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/profile.php?id=100094302499104" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
@@ -524,7 +524,7 @@
 				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
-						<p class="card-text"><b>Church of Saints Mary and Michael</b></p>
+						<p class="card-text"><b>Church of St. Mary &#38; St. Michael</b></p>
 						<p class="card-text">Rathdrum Parish Office, Rathdrum, Co. Wicklow, A67 CY80</p>
 						<p class="card-text"><a href="tel:+35340443390" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 43390</p>
 						<p class="card-text"><a href="mailto:rathdrumparish@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrumparish@gmail.com</p>
@@ -546,7 +546,7 @@
    			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
-						<p class="card-text"><b>Chapel of Ease of Ss. Patrick and Killian (Clara Vale)</b></p>
+						<p class="card-text"><b>Chapel of Ease of St. Patrick &#38; St. Killian (Clara Vale)</b></p>
 						<p class="card-text">Clara Vale, Rathdrum, Co. Wicklow, A67 XW62</p>
 						<p class="card-text"><a href="tel:+35340443390" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 43390</p>
 						<p class="card-text"><a href="mailto:rathdrumparish@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrumparish@gmail.com</p>
