--- a/infoRath.html
+++ b/infoRath.html
@@ -302,7 +302,7 @@
 					<div class="card-body">
 						<p class="card-text"><b>Defibrillator Locations</b></p>
 						<p class="card-text">Avonmore Football Club, Pat O'Toole Park, Ballygannon, Rathdrum, Co. Wicklow, A67 K351</p>
-						<p class="card-text">Church of Saints Mary and Michael, Rathdrum Parish Office, Rathdrum, Co. Wicklow, A67 CY80</p>
+						<p class="card-text">Church of St. Mary &#38; St. Michael, Rathdrum Parish Office, Rathdrum, Co. Wicklow, A67 CY80</p>
 						<p class="card-text">Craft Butchers, 18 Main Street, Rathdrum, Co. Wicklow, A67 EY91</p>
 						<p class="card-text">Casey's Centra, Main Street, Rathdrum, Co. Wicklow, A67 CH58 (inside)
 						<p class="card-text">Medical Hall - Tierney's Pharmacy, 31 Main St, Rathdrum, Co. Wicklow, A67 DH02 (inside)</p>
