--- a/newsRath.html
+++ b/newsRath.html
@@ -191,6 +191,17 @@
 				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
+						<img class="card-img-top" src="images/2026_StPatParade.jpg" alt="ParadeMeeting">
+							<p class="card-text"><b>Rathdrum St. Patrick's Day Parade Meeting</b></p>
+							<p class="card-text">Meeting to discuss the continuation of the Rathdrum St. Patrick’s Day Parade that has been going for 38 years.</p>
+							<p class="card-text">Wednesday 21 January 2026 at 7pm</p>
+							<p class="card-text">RDA Hall, Fairgreen, Rathdrum, A67 X668</p>						
+							<p class="card-text"><a href="mailto:sandyshaugh44@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: sandyshaugh44@gmail.com</p>
+							<a href="https://www.facebook.com/profile.php?id=100080237931108" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						</div>
+					</div>
+					<div class="card bg-dark text-white">
+						<div class="card-body">
 							<img class="card-img-top" src="images/2026_histAGM.jpg" alt="histAGM">
 							<p class="card-text"><b>Rathdrum Historical Society - AGM</b></p>
 							<p class="card-text">Monday 26 January 2026 at 8pm</p>
@@ -206,8 +217,6 @@
 							<p class="card-text"><a href="tel:+353872928660" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 087 292 8660</p>
 							<p class="card-text"><a href="mailto:avondalesportsrathdrum@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: avondalesportsrathdrum@gmail.com</p>
 						</div>
-					</div>
-					<div class="card border-0">
 					</div>
 				</div>        <!-- End card deck x 3 -->	
 			</div><!-- End section -->
