--- a/newsRath.html
+++ b/newsRath.html
@@ -191,9 +191,9 @@
 				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
-						<img class="card-img-top" src="images/2026_StPatParade.jpg" alt="ParadeMeeting">
+						<img class="card-img-top" src="images/2026_StPatParadeMeeting.jpg" alt="ParadeMeeting">
 							<p class="card-text"><b>Rathdrum St. Patrick's Day Parade Meeting</b></p>
-							<p class="card-text">Meeting to discuss the continuation of the Rathdrum St. Patrick’s Day Parade that has been going for 38 years.</p>
+							<p class="card-text">Meeting to discuss the Rathdrum St. Patrick’s Day Parade</p>
 							<p class="card-text">Wednesday 21 January 2026 at 7pm</p>
 							<p class="card-text">RDA Hall, Fairgreen, Rathdrum, A67 X668</p>						
 							<p class="card-text"><a href="mailto:sandyshaugh44@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: sandyshaugh44@gmail.com</p>
