--- a/dirRath.html
+++ b/dirRath.html
@@ -824,10 +824,11 @@
 				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
-						<p class="card-text"><b>Naura Hair &#38; Beauty</b></p>
+						<p class="card-text"><b>Naura Salon &#38; Academy</b></p>
 						<p class="card-text">Saville House, Corballis Upper, Rathdrum, Co. Wicklow, A67 HE98</p>
 						<p class="card-text"><a href="tel:+353851628547" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 085 162 8547</p>
-						<a href="https://booksy.com/en-ie/instant-experiences/widget/7782?instant_experiences_enabled=true&ig_ix=true&is_fb=1&fbclid=IwY2xjawGqq6JleHRuA2FlbQIxMAABHbEUwUk2774qFxFp4q2H2uzw77dmpRX2CH0B3omnjXDRI-IEkXWXKwB4IA_aem_tDmGUZikeSVC6P_4_OTiVA" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<p class="card-text"><a href="mailto:nauraacademyirl@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: nauraacademyirl@gmail.com</p>
+						<a href="https://naurasalonacademy.myshopify.com/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/naurasalonirl" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.instagram.com/naurasalonirl/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
