--- a/invest.html
+++ b/invest.html
@@ -98,7 +98,7 @@
 							<p class="card-text">
 							<a href="https://www.myhome.ie/commercial/auctions/wicklow/auction-property-for-sale-in-rathdrum" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a><b>&nbsp;&nbsp;MyHome.ie - Property for Sale by Auction</b></p>
 							<p class="card-text">
-							<a href="https://www.myhome.ie/commercial/wicklow/commercial-property-in-rathdrum?types=44|14|43|13" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a><b>&nbsp;&nbsp;MyHome.ie - Land</b></p>
+							<a href="https://www.myhome.ie/commercial/wicklow/commercial-property-in-rathdrum?types=44%7C14%7C43%7C13" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a><b>&nbsp;&nbsp;MyHome.ie - Land</b></p>
 						</div>
 					</div>
 			</div>        <!-- End card deck x 3 -->
@@ -143,16 +143,17 @@
 						<p class="card-text">Wicklow Way Academy of Music & Arts is expanding and we are looking for experienced/ qualified music teachers and professional musicians to join our team for the January–May 2026 term.
 						We are recruiting in the following County Wicklow areas: Roundwood, Laragh, Annamoe, Rathdrum, Newtownmountkennedy.</p>
 						<p class="card-text">We are seeking teachers for: (Children & Adults)
-						<ul>
-							<li>Piano
-							<li>Guitar & Ukulele
-							<li>Voice
-							<li>Violin
-							<li>Beginner Keyboard Group Classes
-							<li>Pre-Instrumental Classes
-							<li>Tiny Treble toddler & parent sing-along
-							<li>Little Voices singing classes (ages 4–6)
-						</ul></p>
+							<ul>
+								<li>Piano
+								<li>Guitar & Ukulele
+								<li>Voice
+								<li>Violin
+								<li>Beginner Keyboard Group Classes
+								<li>Pre-Instrumental Classes
+								<li>Tiny Treble toddler & parent sing-along
+								<li>Little Voices singing classes (ages 4–6)
+							</ul>
+						</p>
 						<p class="card-text">Hours: Mondays to Thursdays: 12pm – 8pm, Saturdays 11am - 4pm</p>
 						<p class="card-text">Rates: €33 per hour, €40 per hour (Mobile Music), €50–€60 per group session</p>
 						<p class="card-text">Own transport is essential.  If you’re passionate about teaching, reliable and love helping students grow in confidence, we’d love to hear from you. To apply, please send your CV and short cover note to linseydempsey@yahoo.com></p>
@@ -177,7 +178,7 @@
 								<li>Helping maintain a positive, welcoming gym environment
 							</ul>
 						</p>
-						<p class="card-text">Hours are part time and flexible.</p></p>
+						<p class="card-text">Hours are part time and flexible.</p>
 						<p class="card-text">29 Main Street, Rathdrum, Co. Wicklow, A67 X437</p>
 						<p class="card-text"><a href="tel:+353863910193" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 086 391 0193</p>
 						<p class="card-text"><a href="mailto:info@smg-fitness.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@smg-fitness.com</p>
@@ -201,10 +202,20 @@
 			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
-						<p class="card-text"><b>Advertise local jobs here</b></p>
+						<p class="card-text"><b>The Mill Store</b></p>
+						<p class="card-text"><b>Shop assistant, </b> 2/3 day week, set 2pm-10pm Tuesday & Thursday, third day will vary.</p>
+						<p class="card-text">Must be over 18 to sell tobacco and alcohol.  Apply with C.V. to themillstorerathdrum@gmail.com</p>
+						<p class="card-text">Ivy Leaf, Lower Main Street, Rathdrum, Co. Wicklow, A67 NR52</p>
+						<p class="card-text"><a href="tel:+35340446313" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 46313</p>
+						<p class="card-text"><a href="mailto:themillstorerathdrum@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: themillstorerathdrum@gmail.com</p>
+						<a href="https://www.facebook.com/themillstorerathdrum" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.instagram.com/themillstorerathdrum.ltd" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;
 					</div>
 				</div>
-				<div class="card border-0">
+				<div class="card bg-dark text-white">
+					<div class="card-body">
+						<p class="card-text"><b>Advertise local jobs here</b></p>
+					</div>
 				</div>
 				<div class="card border-0">
 				</div>
