--- a/newsRath.html
+++ b/newsRath.html
@@ -228,6 +228,17 @@
 				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
+							<img class="card-img-top" src="images/2026_heritage.jpg" alt="HertiageAGM">
+							<p class="card-text"><b>Rathdrum & District Heritage Association - AGM</b></p>
+							<p class="card-text">Friday 6 February 2026 at 6:30pm</p>
+							<p class="card-text">The Parnell Lounge, 19 Main Street, Rathdrum, Co. Wicklow, A67 XC53</p>
+							<p class="card-text">All welcome. Thanks everyone for your support! </p>
+							<a href="https://www.facebook.com/Rathdrum.Heritage" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						</div>
+					</div>
+						
+					<div class="card bg-dark text-white">
+						<div class="card-body">
 							<img class="card-img-top" src="images/2026_imbolc.jpg" alt="AvondaleImbolc">
 							<p class="card-text"><b>Beyond the Trees - Imbolc Womens Day Retreat</b></p>
 							<p class="card-text">Sunday 8 February 2026 at 12pm - 5pm </p>
@@ -252,6 +263,9 @@
 							<a href="https://www.instagram.com/beyondthetreesavondale" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 						</div>
 					</div>
+				</div>        <!-- End card deck x 3 -->	
+				
+				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2026_hospice.jpg" alt="hospice">
@@ -260,8 +274,12 @@
 							<p class="card-text"><a href="tel:+353872928660" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 087 292 8660</p>
 							<p class="card-text"><a href="mailto:avondalesportsrathdrum@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: avondalesportsrathdrum@gmail.com</p>
 						</div>
+					</div>	    
+					<div class="card border-0">
 					</div>
-				</div>        <!-- End card deck x 3 -->	
+					<div class="card border-0">
+					</div>
+				</div>        <!-- End card deck x 3 -->
 			</div><!-- End section -->
 			
 			<!--Spacer -->
