--- a/actRath.html
+++ b/actRath.html
@@ -416,7 +416,7 @@
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Inspire Youth Centre</b></p>
-						<p class="card-text">34 Main Street, Rathdrum, Co. Wicklow, A67 HD00</p>
+						<p class="card-text">Unit 3, Ivy Leaf, Lower Street, Rathdrum, Co. Wicklow, A67 FK07</p>
 						<a href="https://crosscare.ie/services/crosscare-youth/east-wicklow/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
@@ -655,11 +655,19 @@
 			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
+						<p class="card-text"><b>Junior Einsteins Science Club</b><br><i>February &#38; March Camps</i></p>
+						<p class="card-text">Beyond the Trees Avondale, Avondale House &#38; Forest Park, Avondale, Rathdrum, Co. Wicklow, A67 P303</p>
+						<p class="card-text"><a href="mailto:welcome@junioreinsteinsscienceclub.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: welcome@junioreinsteinsscienceclub.com</p>
+						<a href="https://junioreinsteinsscienceclub.com/wicklow/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.facebook.com/junioreinsteinsscienceclub/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.instagram.com/junioreinsteinsscienceclub" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
+					</div>
+				</div>
+				<div class="card bg-dark text-white">
+					<div class="card-body">
 						<p class="card-text"><b>Where to find other camps &#38; activities</b></p>
 						<a href="https://www.facebook.com/ActivityTime.Wicklow" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp; 
 					</div>
-				</div>
-				<div class="card border-0">
 				</div>
 				<div class="card border-0">
 				</div>
