--- a/newsRath.html
+++ b/newsRath.html
@@ -275,8 +275,18 @@
 							<p class="card-text"><a href="mailto:avondalesportsrathdrum@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: avondalesportsrathdrum@gmail.com</p>
 						</div>
 					</div>	    
-					<div class="card border-0">
+				<div class="card bg-dark text-white">
+					<div class="card-body">
+						<img class="card-img-top" src="images/2026_jrEinsteins.jpg" alt="einstein">
+						<p class="card-text"><b>Junior Einsteins Science Club - Science Camps</b></p>
+						<p class="card-text">Sunday 22 February and Sunday 15 March 2026</p>	
+						<p class="card-text">Beyond the Trees Avondale, Avondale House &#38; Forest Park, Avondale, Rathdrum, Co. Wicklow, A67 P303</p>
+						<p class="card-text"><a href="mailto:welcome@junioreinsteinsscienceclub.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: welcome@junioreinsteinsscienceclub.com</p>
+						<a href="https://junioreinsteinsscienceclub.com/wicklow/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.facebook.com/junioreinsteinsscienceclub/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.instagram.com/junioreinsteinsscienceclub" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
+				</div>
 					<div class="card border-0">
 					</div>
 				</div>        <!-- End card deck x 3 -->
