--- a/newsRath.html
+++ b/newsRath.html
@@ -228,6 +228,14 @@
 				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
+							<p class="card-text"><b>Kirikee Drama Group</b> - We’re putting together a Variety Night in May to celebrate the Grand Re-Opening of Kirikee Hall and we need YOU to be part of it!  Acting, Singing, Dancing, Comedy or behind-the-scenes helpers</p>
+							<p class="card-text">Friday 6 February 2026 at 8:30pm - All ages welcome — young, old and everyone in between!</p>
+							<p class="card-text">Kirikee Hall, Kirikee, Glenmalure, Co. Wicklow, A67 W586</p>
+							<a href="https://www.facebook.com/profile.php?id=100086757979545" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						</div>
+					</div>	
+					<div class="card bg-dark text-white">
+						<div class="card-body">
 							<img class="card-img-top" src="images/2026_heritage.jpg" alt="HertiageAGM">
 							<p class="card-text"><b>Rathdrum & District Heritage Association - AGM</b></p>
 							<p class="card-text">Friday 6 February 2026 at 6:30pm</p>
@@ -250,6 +258,10 @@
 							<a href="https://www.instagram.com/beyondthetreesavondale" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 						</div>
 					</div>
+
+				</div>        <!-- End card deck x 3 -->	
+				
+				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2026_avondaleValentines.jpg" alt="AvondaleImbolc">
@@ -263,9 +275,6 @@
 							<a href="https://www.instagram.com/beyondthetreesavondale" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 						</div>
 					</div>
-				</div>        <!-- End card deck x 3 -->	
-				
-				<div class="card-deck" style="padding: 0.5rem;">
 					<div class="card bg-dark text-white">
 						<div class="card-body">
 							<img class="card-img-top" src="images/2026_hospice.jpg" alt="hospice">
@@ -275,19 +284,17 @@
 							<p class="card-text"><a href="mailto:avondalesportsrathdrum@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: avondalesportsrathdrum@gmail.com</p>
 						</div>
 					</div>	    
-				<div class="card bg-dark text-white">
-					<div class="card-body">
-						<img class="card-img-top" src="images/2026_jrEinsteins.jpg" alt="einstein">
-						<p class="card-text"><b>Junior Einsteins Science Club - Science Camps</b></p>
-						<p class="card-text">Sunday 22 February and Sunday 15 March 2026</p>	
-						<p class="card-text">Beyond the Trees Avondale, Avondale House &#38; Forest Park, Avondale, Rathdrum, Co. Wicklow, A67 P303</p>
-						<p class="card-text"><a href="mailto:welcome@junioreinsteinsscienceclub.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: welcome@junioreinsteinsscienceclub.com</p>
-						<a href="https://junioreinsteinsscienceclub.com/wicklow/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<a href="https://www.facebook.com/junioreinsteinsscienceclub/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
-						<a href="https://www.instagram.com/junioreinsteinsscienceclub" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
-					</div>
-				</div>
-					<div class="card border-0">
+					<div class="card bg-dark text-white">
+						<div class="card-body">
+							<img class="card-img-top" src="images/2026_jrEinsteins.jpg" alt="einstein">
+							<p class="card-text"><b>Junior Einsteins Science Club - Science Camps</b></p>
+							<p class="card-text">Sunday 22 February and Sunday 15 March 2026</p>	
+							<p class="card-text">Beyond the Trees Avondale, Avondale House &#38; Forest Park, Avondale, Rathdrum, Co. Wicklow, A67 P303</p>
+							<p class="card-text"><a href="mailto:welcome@junioreinsteinsscienceclub.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: welcome@junioreinsteinsscienceclub.com</p>
+							<a href="https://junioreinsteinsscienceclub.com/wicklow/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+							<a href="https://www.facebook.com/junioreinsteinsscienceclub/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+							<a href="https://www.instagram.com/junioreinsteinsscienceclub" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
+						</div>
 					</div>
 				</div>        <!-- End card deck x 3 -->
 			</div><!-- End section -->
