--- a/dirRath.html
+++ b/dirRath.html
@@ -1363,6 +1363,13 @@
 				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
+						<p class="card-text"><b>ScoobyDoo Pet Services Rathdrum</b></p>
+						<p class="card-text"><a href="tel:+353892501017" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 089 2501017 (PM or WhatsApp)</p>
+						<a href="https://www.facebook.com/scoobydoo.dog.walking.rathdrum" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					</div>
+				</div>
+				<div class="card bg-dark text-white">
+					<div class="card-body">
 						<p class="card-text"><b>NSPCA Wicklow</b></p>
 						<p class="card-text">Sharpeshill Sanctuary, Ballygannon More, Rathdrum, Co. Wicklow, A67 YK81</p>
 						<p class="card-text"><a href="tel:+35340444783" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 0404 44783</p>
@@ -1372,6 +1379,9 @@
 						<a href="https://www.instagram.com/nspca_wicklow/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
 				</div>
+			</div>  <!-- End Section -->
+			
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Irish Horse Welfare Trust</b></p>
@@ -1384,7 +1394,12 @@
 						<a href="https://x.com/IHWTMoscowFlyer" target="_blank"><i class="fa-brands fa-x" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
-			</div>  <!-- End Section -->
+      			<div class="card border-0">
+      </div>
+			<div class="card border-0">
+      </div>
+		</div>        <!-- End card deck x 3 -->
+			
 		</div>
 
     <div class="container-fluid p-1 pt-2 bg-white text-white text-center">  </div>
