--- a/dirRath.html
+++ b/dirRath.html
@@ -1561,8 +1561,9 @@
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Local Link Bus</b></p>
-						<p>183 Arklow - Sallins Timetable: <a href="https://www.locallinkckw.ie/_downloads/cc3c50904d4d5ecf09f56208b26a429d" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>
-						<br>Stops: Near Avon Motors &#38;  The Mill Store</p>
+						<p>183 Arklow - Sallins Timetable: <a href="https://docs.google.com/viewerng/viewer?url=https://primary.jwwb.nl/plugin-documents/68c40558c071678a65ec933b69ff872fcf597796.pdf" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>
+						<br>Stops: From Arklow - Corballis/Avoca Road, Avondale GAA, opposite Avon Motors &#38;  The Mill Store/Lower St. Bridge
+					  <br>Stops: To Arklow - opposite The Mill Store, Avon Motors, opposite Avondale GAA, &#38;  Corballis/Avoca Road</p>
 						<p>1395 - Ballinaclash to Rathdrum Timetable (Fridays Only): <a href="https://www.locallinkckw.ie/_downloads/8598142aeb07fd17fa2e8228e0124f05" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a></p>
 						<p>1397 a - Laragh to Arklow Timetable (Fridays Only, Market Square): <a href="https://www.locallinkckw.ie/_downloads/8598142aeb07fd17fa2e8228e0124f05" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a></p>
 						<p>1397 b - Laragh to Wicklow Timetable (Fridays Only, Market Square): <a href="https://www.locallinkckw.ie/_downloads/8598142aeb07fd17fa2e8228e0124f05" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a></p>
