--- a/dirRath.html
+++ b/dirRath.html
@@ -108,14 +108,14 @@
 				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
-						<p class="card-text"><b>St Bridget's</b></p>
-						<p class="card-text">Corballis Upper, Rathdrum, Co. Wicklow, A67 VN30</p>
-						<p class="card-text"><a href="tel:+353830637727" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 083 063 7727</p>
-						<a href="https://www.discoverireland.ie/accommodation/st-bridget-s-b-b-rathdrum" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<p class="card-text"><b>Meadowbrook</b></p>
+						<p class="card-text">Corballis, Rathdrum, Co. Wicklow, A67 X853</p>
+						<p class="card-text"><a href="tel:+353867760127" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 086 776 0127</p>
+						<p class="card-text"><a href="mailto:meadowbrookbnb@gmail.com " target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: meadowbrookbnb@gmail.com</p>
+						<a href="https://www.airbnb.ie/h/meadowbrookstudio" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
-      </div>  <!-- End card deck x 3 -->
-  
+			</div>  
 			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
