--- a/newsRath.html
+++ b/newsRath.html
@@ -144,7 +144,8 @@
 							<p class="card-text"><a href="tel:+353833575421" target="_blank"><i class="fa-solid fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 083 357 5421</p>	
 							<p class="card-text"><a href="mailto:RathdrumPatricksDayParade@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: RathdrumPatricksDayParade@gmail.com or
 							<br><a href="mailto:sandyshaugh44@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: sandyshaugh44@gmail.com</p>
-							<a href="https://www.facebook.com/profile.php?id=100080237931108" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+							<a href="https://www.facebook.com/profile.php?id=100080237931108" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+						  <p class="card-text"><b>Next meeting:</b> Wednesday 4 February 2026 at 7pm in The Parnell, 19 Main Street, Rathdrum, Co. Wicklow, A67 XC53.  Access to the Parnell Lounge is through the bar.  All welcome to attend.</p>
 						</div>
 					</div>
 				</div>        <!-- End card deck x 3 -->	
