--- a/commRath.html
+++ b/commRath.html
@@ -200,7 +200,8 @@
 						<p class="card-text"><b>Residents Association</b></p>
 						<p class="card-text">Connect with the Residents Association in your area to help improve your community.</p>
 						<p>No Residents Association in your area?  Search for “Residents' Association Guidelines and Handbook” for information on how to set one up.</p>
-					  <a href="https://www.wicklow.ie/Living/Services/Housing/Social-Housing/Estate-Management" target="_blank"><i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Wicklow Co. Co. support for Estate Management			
+					  </p><a href="https://www.wicklow.ie/Living/Services/Housing/Social-Housing/Estate-Management" target="_blank"><i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Wicklow Co. Co. support for Estate Management</p>			
+						<a href="https://buff.ly/VtYTy2p" target="_blank"><i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Estate Development Funding Scheme 2026 		 
 					</div>
 				</div>
 				<div class="card border-0">
