--- a/newsRath.html
+++ b/newsRath.html
@@ -94,7 +94,11 @@
 					</div>
 					<div class="card bg-dark text-white">
 						<div class="card-body">
-							<p class="card-text"><b>Current Surveys &#38; Consultations:</b></p>		
+							<!--<p class="card-text"><b>Current Surveys &#38; Consultations:</b></p>		-->
+						  <p class="card-text"><b>Government Funding</b></p>
+							<img class="card-img-top" src="images/2026_WW_estates.jpg" alt="EstatesFund">
+							<p class="card-text">Wicklow County Council is now accepting applications from Residents Association for funding to maintain and enhance green areas.  Application form and contact details for Arklow Municipal District in link below.</p>
+							<a href="https://buff.ly/VtYTy2p" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
 					</div>	  
 				</div>  <!-- End card deck x 3 -->
@@ -104,7 +108,7 @@
 			<div class="container-fluid p-1 pt-2 bg-white text-white text-center"></div>
 
 			<div class="container p-1 pt-2 bg-secondary text-dark text-center">
-				<h5>Upcoming Events</h5>
+				 <h5>Upcoming Events</h5> 
 			</div>
   
 			<div class="container">	
