--- a/newsRath.html
+++ b/newsRath.html
@@ -97,7 +97,7 @@
 							<!--<p class="card-text"><b>Current Surveys &#38; Consultations:</b></p>		-->
 						  <p class="card-text"><b>Government Funding</b></p>
 							<img class="card-img-top" src="images/2026_WW_estates.jpg" alt="EstatesFund">
-							<p class="card-text">Wicklow County Council is now accepting applications from Residents Association for funding to maintain and enhance green areas.  Application form and contact details for Arklow Municipal District in link below.</p>
+							<p class="card-text">Wicklow County Council is now accepting applications from Residents Associations for funding to maintain and enhance green areas.  Application form and contact details for Arklow Municipal District in link below.</p>
 							<a href="https://buff.ly/VtYTy2p" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						</div>
 					</div>	  
