--- a/dirRath.html
+++ b/dirRath.html
@@ -1540,7 +1540,7 @@
     <div class="container-fluid p-1 pt-2 bg-white text-white text-center">  </div>
 
     <div class="container p-1 pt-2 bg-secondary text-dark text-center">
-      <h5>Transport</h5>
+      <h5>Transport, Taxis &#38;  Driving Instructors</h5>
     </div>
   
     <div class="container">
@@ -1590,8 +1590,15 @@
 					<a href="https://www.facebook.com/profile.php?id=61570768130379" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 				</div>
 			</div>
-			<div class="card border-0">
-      </div>
+      <div class="card bg-dark text-white">
+        <div class="card-body">
+          <p class="card-text"><b>The CompLete ADI (43668)</b></p>
+					<p class="card-text"><a href="tel:+353896116978" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 089 611 6978</p>
+					<p class="card-text"><a href="tel:+353892130293" target="_blank"><i class="fa-brands fa-whatsapp"" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;WhatsApp: 089 2130293</p>
+					<p class="card-text"><a href="mailto:TheCompLeteADI@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: TheCompLeteADI@gmail.com</p>
+					<a href="https://www.thecompleteadi.com" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+				</div>
+			</div>
 			<div class="card border-0">
       </div>
 		</div>        <!-- End card deck x 3 -->
