--- a/actRath.html
+++ b/actRath.html
@@ -477,6 +477,17 @@
 				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
+						<p class="card-text"><b>Knitting &#38; Crocheting Group</b></p>
+						<p class="card-text">Last Wednesday of every month at 6:30pm</p>
+						<p class="card-text">Rathdrum Library, Back Lane, Balleese Lower, Rathdrum, Co. Wicklow, A67 DK29</p>							<p class="card-text"><a href="tel:+35340443232" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 43232</p>
+						<p class="card-text"><a href="mailto:rathdrumlib@wicklowcoco.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrumlib@wicklowcoco.ie</p>
+						<a href="https://www.wicklow.ie/Living/Services/Libraries/Library-Branches/Rathdrum-Library" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.facebook.com/WicklowLibraries" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.instagram.com/wicklowlibraries/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
+					</div>
+				</div>
+				<div class="card bg-dark text-white">
+					<div class="card-body">
 						<p class="card-text"><b>Craft Group</b></p>
 						<p class="card-text">Ballinacor Community Park, Carriglineen, Glenmalure, Co. Wicklow, A67 WY83</p>
 						<p>Tuesdays from 6pm to 9pm</p>
@@ -487,6 +498,8 @@
 						<a href="https://www.instagram.com/ballinacorcommunity/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
+			</div>        <!-- End card deck x 3 -->
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Wicklow Local Sports Partnership</b></p>
@@ -496,6 +509,10 @@
 						<a href="https://wicklowlsp.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/activewicklow" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
+				</div>
+				<div class="card border-0">
+				</div>
+				<div class="card border-0">
 				</div>
 			</div>        <!-- End card deck x 3 -->
     </div>  <!-- End Section -->
