--- a/actRath.html
+++ b/actRath.html
@@ -478,8 +478,9 @@
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Knitting &#38; Crocheting Group</b></p>
+						<p class="card-text">Rathdrum Library, Back Lane, Balleese Lower, Rathdrum, Co. Wicklow, A67 DK29</p>
 						<p class="card-text">Last Wednesday of every month at 6:30pm</p>
-						<p class="card-text">Rathdrum Library, Back Lane, Balleese Lower, Rathdrum, Co. Wicklow, A67 DK29</p>							<p class="card-text"><a href="tel:+35340443232" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 43232</p>
+						<p class="card-text"><a href="tel:+35340443232" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 43232</p>
 						<p class="card-text"><a href="mailto:rathdrumlib@wicklowcoco.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: rathdrumlib@wicklowcoco.ie</p>
 						<a href="https://www.wicklow.ie/Living/Services/Libraries/Library-Branches/Rathdrum-Library" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/WicklowLibraries" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
