--- a/commRath.html
+++ b/commRath.html
@@ -72,7 +72,7 @@
 					<div class="card-body">
 						<p class="card-text"><b>Rathdrum Tidy Towns</b></p>
 						<p class="card-text"><a href="mailto:TidyTownsRathdrum@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: TidyTownsRathdrum@gmail.com</p>
-						<a href="https://www.tidytowns.ie/competition/faqs/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.tidytowns.ie/resources/handbook/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.facebook.com/RathdrumTidyTown/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 						<a href="https://www.instagram.com/rathdrumtidytowns" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>
 					</div>
