--- a/dirRath.html
+++ b/dirRath.html
@@ -578,6 +578,16 @@
 				</div>
 				<div class="card bg-dark text-white">
 					<div class="card-body">
+						<p class="card-text"><b>Leah Hawkesworth Acupuncture</b></p>
+						<p class="card-text"><a href="tel:+353830685431" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: 083 068 5431</p>
+						<p class="card-text"><a href="mailto:LeahHawkesworth@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: LeahHawkesworth@gmail.com</p>
+						<a href="http://www.claravalewellness.ie/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.facebook.com/profile.php?id=100083331131483" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+						<a href="https://www.instagram.com/leah_hawkesworth_acupuncture/" target="_blank"><i class="fa-brands fa-instagram" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					</div>
+				</div>
+				<div class="card bg-dark text-white">
+					<div class="card-body">
 						<p class="card-text"><b>Sunbeam House Services</b></p>
 						<p class="card-text"><a href="tel:+35312868451" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 01 286 8451</p>
 						<p class="card-text"><a href="mailto:info@sunbeam.ie" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: info@sunbeam.ie</p>
@@ -586,6 +596,8 @@
 						<!--<a href="https://x.com/SunbeamHouse" target="_blank"><i class="fa-brands fa-x" style="color:#FFFFFF"></i></a> -->
 					</div>
 				</div>
+			</div>        <!-- End card deck x 3 -->
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>St. Columcille's Injury Unit Loughlinstown</b><br><i>(Age 14 and older)</i></p>
@@ -594,8 +606,11 @@
 						<a href="https://www2.hse.ie/services/find-urgent-emergency-care/st-columcilles-injury-unit-loughlinstown/" target="_blank"> <i class="fa-solid fa-laptop" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div>
+				<div class="card border-0">
+				</div>
+				<div class="card border-0">
+				</div>
 			</div>        <!-- End card deck x 3 -->
-			
     </div>  <!-- End Section medical -->
 
 		<!--Spacer -->
