--- a/dirRath.html
+++ b/dirRath.html
@@ -1523,6 +1523,15 @@
 			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
+						<p class="card-text"><b>Avon Tow and Rescue </b></p>
+						<p class="card-text">Rathdrum, Co. Wicklow</p>
+						<p class="card-text"><a href="tel:+353858528832" target="_blank"><i class="fa fa-mobile" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Mob: +353 85 852 8832</p>
+						<p class="card-text"><a href="mailto:avontowandrescue@gmail.com" target="_blank"><i class="fa-solid fa-envelope" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Email: avontowandrescue@gmail.com</p>
+						<a href="https://www.facebook.com/avontowandrescue/" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
+					</div>
+				</div>
+				<div class="card bg-dark text-white">
+					<div class="card-body">
 						<p class="card-text"><b>RK Tyres & Service Centre</b></p>
 						<p class="card-text">Slate Row, Corballis Upper, Rathdrum, Co. Wicklow, A67 A312</p>
 						<p class="card-text"><a href="tel:+35340446293" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 46293</p>
@@ -1538,6 +1547,8 @@
 						<p class="card-text"><a href="tel:+35340446358" target="_blank"><i class="fa-solid fa-phone" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;Tel: 0404 46358</p>
 					</div>
 				</div>  
+			</div>        <!-- End card deck x 3 -->
+			<div class="card-deck" style="padding: 0.5rem;">
 				<div class="card bg-dark text-white">
 					<div class="card-body">
 						<p class="card-text"><b>Seamus Clarke Motors Ltd.</b></p>
@@ -1548,7 +1559,10 @@
 						<a href="https://www.facebook.com/profile.php?id=100062945155741#" target="_blank"><i class="fa-brands fa-facebook" style="color:#FFFFFF"></i></a>&nbsp;&nbsp;
 					</div>
 				</div> 
-			</div>        <!-- End card deck x 3 -->
+				<div class="card border-0">
+				</div>
+				<div class="card border-0">
+				</div>
 		</div>  <!-- End Section -->
 
    
